Bug 9499: Wrong font and weight used on accordion headings
This is an issue in Firefox only; I added a Mozilla-specific extension to fix it

--- a/Web Apps/DMI.NET/DMI.NET/Content/OpenHR.css
+++ b/Web Apps/DMI.NET/DMI.NET/Content/OpenHR.css
@@ -583,10 +583,17 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#7abcff', end
 
 #ContextMenuIcon { border-style: none;}
 
-#contextmenu h3 { font-size: 14pt;
+#contextmenu h3 { 
+	font-size: 14pt;
 	padding: 2px;
 }
-	
+
+@-moz-document url-prefix() { /*Mozilla-specific extension */
+	#contextmenu h3 {
+		font-weight: normal;
+	}
+}
+
 #contextmenu > div {
 	padding-left: 0;
 	padding-top: 0;
